<resources>
    <string name="app_name">Gib</string>

    <string name="updater">Updater</string>
    <string name="loading_packages">Gibbing updates…</string>
    <string name="cannot_load_packages">Cannot gib updates. So sed</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_account">Account</string>
    <string name="navigation_store">Store</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="change_device">Change device</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
</resources>
